--- a/package.json
+++ b/package.json
@@ -62,5 +62,8 @@
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "prettier": "^3.3.2"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
