--- a/render.yaml
+++ b/render.yaml
@@ -4,13 +4,10 @@ services:
     env: node
     buildCommand: |
       npm install
-      npm install --prefix client
+      npm run build --prefix client  
     startCommand: |
-      npm run start --prefix client
-    envVars:
-      - key: NODE_ENV
-        value: production
-    staticPublishPath: client/build
+      npm run start --prefix client  
+    staticPublishPath: client/build 
 
   - type: web
     name: server
