--- a/client/package.json
+++ b/client/package.json
@@ -65,7 +65,8 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "prettier": "^3.3.2"
+    "prettier": "^3.3.2",
+    "webpack-dev-server": "^5.1.0"
   },
   "engines": {
     "node": ">=14.0.0"
