--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "port",
+  "name": "portfolio",
   "version": "1.0.0",
   "scripts": {
     "start": "concurrently \"npm start --prefix client\" \"npm start --prefix server\"",
@@ -12,7 +12,6 @@
   "dependencies": {
     "cors": "^2.8.5",
     "fs": "^0.0.1-security",
-    "port": "file:",
-    "your-project": "file:"
+    "portfolio": "file:"
   }
 }
