--- a/render.yaml
+++ b/render.yaml
@@ -2,28 +2,11 @@ services:
   - type: web
     name: client
     env: node
-    buildCommand: |
-      npm install
-      npm run build --prefix client  
-    startCommand: |
-      npm run start --prefix client  
-    staticPublishPath: client/build 
+    buildCommand: "cd client && npm install && npm run build"
+    startCommand: "cd client && npm start"
 
   - type: web
     name: server
     env: node
-    buildCommand: |
-      npm install
-      npm install --prefix server
-    startCommand: |
-      npm run start --prefix server
-    envVars:
-      - key: NODE_ENV
-        value: production
-    region: us
-    manualDeploy: true
-
-  # Optional: Add a database service (if applicable)
-  # - type: database
-  #   name: my-database
-  #   plan: free
+    buildCommand: "cd server && npm install"
+    startCommand: "cd server && node server.js"
